# SDP_Graph-Partitioning

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  autorun.sh  compute_metis.sh  graph_generator.cpp  graph_partitioner.cpp  main.cpp  main_test.cpp  main_test_mutation.cpp  main_test_parallelization.cpp  main_test_readgraph  main_test_readgraph.cpp  new_main.cpp
Crossover/: Crossover.cpp  Crossover.h
DELETE_Tests/: main_test_mutation.cpp  main_test_parallelization.cpp  main_test_readgraph.cpp
Era/: Era.cpp  Era.h  Era_Parallel.cpp
Fitness/: Fitness.h
GeneticAlgorithm/: GA.cpp  GA.h
Graph/: Graph.cpp  Graph.h
GraphGenerator/: graph.txt  graph_generator  graph_generator.cpp  main.py
Individual/: Individual.cpp  Individual.h
Randomizer/: RandomGenerator.cpp  RandomGenerator.h
Utility/: utility.cpp  utility.h
data/: graph_100_150.txt  graph_20_20.txt  graph_50_150.txt
data/METIS/: graph_20_20_metis.txt  graph_20_20_metis.txt.part.2  graph_20_20_metis.txt.part.3
data/graph_10000000_25000000/: metis_text.txt  standard_text.txt
data/graph_1000000_2500000/: metis_text.txt  standard_text.txt
data/graph_10000_15000/: metis_text.txt  standard_text.txt
data/graph_1000_2000/: metis_text.txt  standard_text.txt
data/graph_100_150/: metis_text.txt  standard_text.txt
data/graph_20_20/: metis_text.txt  standard_text.txt
data/graph_3000000_7500000/: metis_text.txt  standard_text.txt
data/graph_5000000_12500000/: metis_text.txt  (+1 more)
fitness/: Fitness.cpp  Fitness.h  fitness.cpp
src/: graph_generator.cpp  graph_partitioner.cpp
(+99 files in other folders)
